# vcpkg_sdl3_test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  build.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
ports/sdl3-gfx/: fix-cmake.patch  portfile.cmake
res/: README.txt  checker.ppm
src/: App.cpp  App.h  main.cpp
